Forceplay and more draw to match changes

--- a/toDo
+++ b/toDo
@@ -16,8 +16,7 @@ Game embed shows channelID instead of name
 Hand embed shows user tag id instead of name
 /start reply should be deleted once the game starts
 wild card messages missing capitalization
-
+Other players card count shown as zero in dm message because the game message is sent before other players get their cards
 
 
 Fixed...? 
-Other players card count shown as zero in dm message 
