Async player starting! Saves a lot of time, esspecially with larger games

--- a/toDo
+++ b/toDo
@@ -1,13 +1,14 @@
-Reverse/skips need to be fixed again
+
 draw cards
 stacks
 7-0
-jump in
+jump in/69
 
 
 
 player profiles
 Async message sending for game startup
+Async message edits maybe
 
 
 BUGS:
