Fix wild and draw 4 cards!

--- a/toDo
+++ b/toDo
@@ -4,7 +4,7 @@ stacks
 7-0
 jump in/69
 
-
+Redo hand message. Ideas pinned in #testing-spam
 
 player profiles
 Async message sending for game startup
