--- a/toDo
+++ b/toDo
@@ -1,16 +1,13 @@
 
-ping user for turn
 7-0
-jump in/69
+69
 
 Redo hand message. Ideas pinned in #testing-spam
 
 player profiles
-Async message sending for game startup
-Async message edits maybe
-
 
 BUGS:
+Jumping in with plus 4s sometimes gets the player state stuck in card and the plus 4 cannot be finished
 
 Game embed shows channelID instead of name
 Hand embed shows user tag id instead of name
